fix for mobile, when the heading wraps around it changes the header height

--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -7,7 +7,7 @@ $link-color: #1F8A70
 $selection-color: #FFF498
 
 $bg-color: #fff
-$header-color: #eee
+$header-color: rgba(238,238,238,0.97)
 $post-bg-color: #455a64
 $accent-color: #b0bec5
 $link-color: #90a4ae
